<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".TriviaActivity">

    <TextView
            android:id="@+id/category"
            android:layout_width="match_parent"
            android:layout_height="82dp"
            android:layout_marginEnd="@dimen/four"
            android:layout_marginStart="@dimen/four"
            android:layout_marginTop="32dp"
            android:enabled="true"
            android:text="choose category"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintHorizontal_bias="1.0" app:layout_constraintTop_toTopOf="parent"/>

    <Button
            android:id="@+id/geography"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/four"
            android:layout_marginStart="@dimen/four"
            android:layout_marginTop="32dp"
            android:enabled="true"
            android:text="@string/geography"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/category"/>
    <Button
            android:id="@+id/sports"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/four"
            android:layout_marginStart="@dimen/four"
            android:layout_marginTop="@dimen/three"
            android:enabled="true"
            android:text="@string/sports"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/geography" />
    <Button
            android:id="@+id/science"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/four"
            android:layout_marginStart="@dimen/four"
            android:layout_marginTop="@dimen/three"
            android:enabled="true"
            android:text="@string/science"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/sports" />
    <Button
            android:id="@+id/history"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/four"
            android:layout_marginStart="@dimen/four"
            android:layout_marginTop="@dimen/three"
            android:enabled="true"
            android:text="@string/history"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/science" />



</android.support.constraint.ConstraintLayout>