<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".SignupActivity">

    <EditText
            android:id="@+id/username1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/one"
            android:layout_marginStart="@dimen/one"
            android:layout_marginTop="@dimen/two"
            android:ems="10"
            android:hint="@string/username"
            android:inputType="textPersonName"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/login_title" />
    <EditText
            android:id="@+id/password1"
            android:layout_width="wrap_content"
            android:layout_height="45dp"
            android:layout_marginEnd="@dimen/one"
            android:layout_marginStart="@dimen/one"
            android:layout_marginTop="@dimen/one"
            android:ems="10"
            android:hint="@string/password"
            android:inputType="textPassword"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/username1" />
    <EditText
            android:id="@+id/confirmpassword"
            android:layout_width="wrap_content"
            android:layout_height="43dp"
            android:layout_marginEnd="@dimen/one"
            android:layout_marginStart="@dimen/one"
            android:layout_marginTop="@dimen/one"
            android:ems="10"
            android:hint="@string/password"
            android:inputType="textPassword"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/password1" />

    <Button
            android:id="@+id/signUp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/four"
            android:layout_marginStart="@dimen/four"
            android:layout_marginTop="@dimen/three"
            android:enabled="true"
            android:text="@string/signup"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/confirmpassword" />


</android.support.constraint.ConstraintLayout>