<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ScoresActivity">

    <TextView
            android:id="@+id/yourScoreTextView"
            android:layout_width="80dp"
            android:layout_height="26dp"
            android:layout_marginEnd="@dimen/one"
            android:layout_marginStart="@dimen/one"
            android:layout_marginTop="@dimen/three"
            android:text="@string/Score"
            android:textSize="@dimen/title_font_size"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:textAlignment="center"/>

    <Button
            android:text="@string/play_again"
            android:layout_width="169dp"
            android:layout_height="wrap_content"
            android:id="@+id/playAgainButton"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/yourScoreTextView"/>
    <TextView
            android:text="@string/Total_Questions"
            android:layout_width="121dp"
            android:layout_height="43dp"
            android:id="@+id/yourTotalQuestions"
            app:layout_constraintTop_toBottomOf="@+id/yourScoreTextView"
            android:layout_marginBottom="36dp"
            app:layout_constraintBottom_toTopOf="@+id/playAgainButton"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="8dp"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp"
            android:textAlignment="center"
            android:textStyle="bold"/>
    <TextView
            android:text="TextView1"
            android:layout_width="wrap_content"
            android:layout_height="24dp"
            android:id="@+id/scoreTextView"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="8dp"
            android:layout_marginTop="8dp"
            app:layout_constraintBottom_toTopOf="@+id/yourTotalQuestions"
            app:layout_constraintTop_toBottomOf="@+id/yourScoreTextView"
            app:layout_constraintVertical_bias="0.134" android:textAlignment="center"/>
    <TextView
            android:text="TextView"
            android:layout_width="68dp"
            android:layout_height="32dp"
            android:id="@+id/yourTotalTextView"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="11dp"
            android:layout_marginTop="25dp"
            app:layout_constraintTop_toBottomOf="@+id/yourTotalQuestions"
            android:layout_marginBottom="60dp"
            app:layout_constraintBottom_toTopOf="@+id/playAgainButton"
            android:textAlignment="center"/>

    <Button
            android:id="@+id/practice"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/four"
            android:layout_marginStart="@dimen/four"
            android:layout_marginTop="120dp"
            android:enabled="true"
            android:text="@string/practice"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/yourTotalTextView"
            app:layout_constraintHorizontal_bias="0.0"/>

</android.support.constraint.ConstraintLayout>